--- a/02-Homework/Assets/Images/style.css
+++ b/02-Homework/Assets/Images/style.css
@@ -5,6 +5,8 @@
 .navbar-brand {
   background-color: darkturquoise;
   color: white;
+  length: 100%
+  width: 10%
   float:left;
   display: block;
   border: 10%, 100%;
