portfolio pictures updated

--- a/02-Homework/Assets/Images/style.css
+++ b/02-Homework/Assets/Images/style.css
@@ -5,6 +5,12 @@ body {
 }
 /* This photo is a copyright found on website: 
 https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-court-resources.html*/ 
+.about-me {
+  color: darkturquoise;
+}
+.portfolio {
+  color:darkturquoise;
+}
 .navbar {
   border-bottom: 3px solid lightgrey;
   }
@@ -25,13 +31,39 @@ https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-c
   float: right;
   }
 .card {
-  margin: 10%;
-}
-.card-title {
-  text-align: center;
-  margin: 10%;
+  margin: 1%;
 }
 #portfolio-pic {
-    margin: 5%;
-    padding: 5%;
+    margin: 1%;
+    padding: 1%;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: darkgray;
+  color: white;
+  text-align: center;
+
+  border-top: 5px solid darkturquoise;  
+}
+#picture-1 {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 100%;
+  margin: 1%;
+}
+#picture-2 {
+border: 1px solid #ddd;
+border-radius: 4px;
+padding: 5px;
+width: 100%;
+margin: 1%;
+}
+.flex-container{
+  clear:both;
+  display:flex;
+  flex-direction: column;
 }
