--- a/02-Homework/Assets/Images/style.css
+++ b/02-Homework/Assets/Images/style.css
@@ -13,6 +13,8 @@ https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-c
 }
 .navbar {
   border-bottom: 3px solid lightgrey;
+  background-color: darkgrey;
+  color: white
   }
 .navbar-brand {
   color: white;
@@ -34,8 +36,14 @@ https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-c
   margin: 1%;
 }
 #portfolio-pic {
+    width: 100%;
+    height: auto;
     margin: 1%;
     padding: 1%;
+}
+.portfolio-text1 {
+  width: 100%;
+  height: auto;
 }
 .footer {
   position: fixed;
