--- a/02-Homework/Assets/Images/style.css
+++ b/02-Homework/Assets/Images/style.css
@@ -6,30 +6,23 @@ body {
 /* This photo is a copyright found on website: 
 https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-court-resources.html*/ 
 
-.portfolio {
-  color:darkturquoise;
+.portfolio, .about-me, .contact {
+  color: teal;
 }
-.card {
-  margin: 1%;
-}
-#portfolio-pic {
-    width: 350px;
-    height: 350px;
-    margin: 1%;
-    padding: 1%;
 }
 .portfolio-text1 {
   text-align: right;
+  font-size: 18px;
 }
 .footer {
-  position: fixed;
+  position: sticky;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: darkgray;
   color: white;
   text-align: center;
-  border-top: 5px solid darkturquoise;  
+  border-top: 5px solid teal;  
 }
 #portfolio-pic {
   border: 1px solid #ddd;
@@ -39,13 +32,6 @@ https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-c
   height: auto;
   margin: 1%;
 }
-.bottomleft {
-  position:absolute;
-  bottom: 8px;
-  left: 16px;
-  font-size: 18px;
-}
-
 #about-me-pic {
   border: 1px solid #ddd;
   border-radius: 1px;
@@ -54,6 +40,18 @@ https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-c
   height: 350px;
   margin: 1%;
 }
-#portfolio-text1 {
-  font-size: 18px;
+.navbar {
+  left: 0;
+  top: 0;
+  width: 100%;
+  border-bottom: 5px solid teal;  
+}
+.bg-light{
+  background-color: darkgray!important;
+  color: white!important;
+}
+.navbar-brand{
+  color: white!important;
+  font-size: larger;
+  font-weight: bold;
 }
