updated portfolio pics

--- a/02-Homework/Assets/Images/style.css
+++ b/02-Homework/Assets/Images/style.css
@@ -28,8 +28,8 @@ https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-c
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 350px;
-  height: 350px;
+  width: 100%;
+  height: auto;
   margin: 1%;
 }
 #about-me-pic {
@@ -63,4 +63,7 @@ https://www.usta.com/en/home/organize/grants-and-assistance/national/36_---60_-c
 }
 .links{
   color:white
+}
+figcaption{
+  color: white;
 }
